RESOLVED FIXED82766
[BlackBerry] Speed up processing of Selection region generation.
https://bugs.webkit.org/show_bug.cgi?id=82766
Summary [BlackBerry] Speed up processing of Selection region generation.
Mike Fenton
Reported 2012-03-30 11:54:10 PDT
This addresses both bug 81536 and the regression caused by it.
Attachments
Patch (20.57 KB, patch)
2012-03-30 12:10 PDT, Mike Fenton
no flags
Fixed Patch (3.75 KB, patch)
2012-04-12 07:21 PDT, Mike Fenton
no flags
Mike Fenton
Comment 1 2012-03-30 12:10:11 PDT
Rob Buis
Comment 2 2012-03-30 12:13:15 PDT
Comment on attachment 134855 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=134855&action=review Looks good. > Source/WebKit/blackberry/WebKitSupport/SelectionHandler.cpp:814 > + for (unsigned int i = 0; i < rectList.size(); i++) { Just unsigned is likely enough. > Source/WebKit/blackberry/WebKitSupport/SelectionHandler.cpp:886 > + for (unsigned int i = 0; i < unclippedRegion.numRects(); i++) Ditto.
WebKit Review Bot
Comment 3 2012-03-30 13:51:46 PDT
Comment on attachment 134855 [details] Patch Clearing flags on attachment: 134855 Committed r112721: <http://trac.webkit.org/changeset/112721>
WebKit Review Bot
Comment 4 2012-03-30 13:51:52 PDT
All reviewed patches have been landed. Closing bug.
Antonio Gomes
Comment 5 2012-04-03 10:15:53 PDT
Comment on attachment 134855 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=134855&action=review > Source/WebKit/blackberry/WebKitSupport/SelectionHandler.cpp:808 > +static bool regionRectListContainsPoint(IntRectRegion& region, WebCore::IntPoint point) 1st param should be const 2nd param should be const&
Mike Fenton
Comment 6 2012-04-12 06:44:16 PDT
This patch caused a general error causing selection to fail. Bug 83355, the temporary fix for that, regressed this bug.
Mike Fenton
Comment 7 2012-04-12 07:21:13 PDT
Created attachment 136906 [details] Fixed Patch
Rob Buis
Comment 8 2012-04-12 07:23:11 PDT
Comment on attachment 136906 [details] Fixed Patch LGTM.
WebKit Review Bot
Comment 9 2012-04-12 08:54:04 PDT
Comment on attachment 136906 [details] Fixed Patch Clearing flags on attachment: 136906 Committed r113987: <http://trac.webkit.org/changeset/113987>
WebKit Review Bot
Comment 10 2012-04-12 08:54:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.