Source/WebKit/blackberry/WebKitSupport/DOMSupport.cpp
@@ -48,6 +48,15 @@ namespace BlackBerry {
 namespace WebKit {
 namespace DOMSupport {
 
+void visibleTextQuads(const VisibleSelection& selection, Vector<FloatQuad>& quads)
+{
+    if (!selection.isRange())
+        return;
+    ASSERT(selection.firstRange());
+
+    visibleTextQuads(*(selection.firstRange()), quads, true /* useSelectionHeight */);
+}
+
 void visibleTextQuads(const Range& range, Vector<FloatQuad>& quads, bool useSelectionHeight)
 {
     // Range::textQuads includes hidden text, which we don't want.
